--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "helloworld"
 version = "0.1.0"
 edition = "2021"
+resolver = "1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,6 +11,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.67"
+datafusion = "7.0.0"
+tokio = "1.17.0"
+getrandom = { version = "0.2.5", features = ["js"] }
+lz4 = "1.23.1"
+
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = ["-Oz", "--enable-mutable-globals"]
